Add Richard's speaker and session info.

--- a/program.html
+++ b/program.html
@@ -597,11 +597,12 @@
                     </td>
 
                     <td class="popup">
-                        <img class="program-photo" alt="" src="images/speakers/Lawrence.jpg">
-                        <h4 class="name">林宜儒 (Lawrence Lin)</h4>
-                        <span class="program-name">淺談愛料理網站營運</span>
-                        <a>《愛料理》是個專門讓網友可以分享食譜、搜尋食譜的社群網站，目前站上擁有由使用者所分享的上萬篇食譜，每個月有超過 200 萬人次使用《愛料理》尋找、收藏食譜，其中超過一半的流量是來自各種行動裝置。<br /><br />
-                            營運《愛料理》網站的過程中，遇到的挑戰包括網站流量成長過程、產品複雜度不斷提高所遇到的技術問題與團隊運作方式的挑戰。本次講題將針對技術與團隊運作兩方面，淺談我們如何從 0 開始，逐步打造包括網站、手機、平板以及其他第三方配合廠商的產品版圖，並分享我們團隊如何持續提高服務的穩定度、追求高可用度的經驗。
+                        <img class="program-photo" alt="" src="images/speakers/dlackty.jpg">
+                        <h4 class="name">李致緯 (Richard Lee)</h4>
+                        <span class="program-name">打造愛料理開發及營運團隊</span>
+                        <a>
+                            《愛料理》是以食譜為主題的社群網站，擁有由使用者所分享的數萬篇食譜。每個月有超過 200 萬人次使用《愛料理》尋找、收藏食譜，其中超過一半的流量是來自行動平台。<br /><br />
+                            一個產品上線一年多、不到 10 人的工程團隊，我們遇到了流量成長、平台的擴充以及團隊合作等內外不同的挑戰。在本次的講題當中，會分別以開發流程、網站營運以及行動整合三個面向，分享我們團隊如何持續提高服務的穩定度、追求高可用度的經驗。
                         </a>
                     </td>
 
